securityGroup.tf
resource "aws_security_group" "demoProjectSG" {
    name = "demoProject-SG"
    description = "allow SSH, HTTPS inbound traffic"
    vpc_id =   aws_vpc.demoProject.id
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
